tests/NormalTests/paczka1/fuzzy1/95717054.err
Error in line 7: fa6 S853 52,2
Error in line 3: S853 S853 96,4
Error in line 27: S853 S503 55,0
